--- a/Index.html
+++ b/Index.html
@@ -198,7 +198,7 @@ text-align: center;
 
     <div>
         
-        <embed src="https://github.com/NikolaDragomirovic3973/AD251_DZ3_Nikola-Dragomirovic_3973/blob/main/index.html" width="1200" height="600">
+        <embed src="https://nikoladragomirovic3973.github.io/AD251_DZ3_Nikola-Dragomirovic_3973/" width="1200" height="600">
 
     </div>
 
