--- a/Index.html
+++ b/Index.html
@@ -198,7 +198,7 @@ text-align: center;
 
     <div>
         
-        <embed src="https://nikoladragomirovic3973.github.io/AD251_DZ3_Nikola-Dragomirovic_3973/" width="1200" height="600">
+        <iframe src="https://nikoladragomirovic3973.github.io/AD251_DZ3_Nikola-Dragomirovic_3973/" width="1200" height="600"></iframe>
 
     </div>
 
