--- a/Index.html
+++ b/Index.html
@@ -198,7 +198,8 @@ text-align: center;
 
     <div>
         
-        <iframe src="https://nikoladragomirovic3973.github.io/AD251_DZ3_Nikola-Dragomirovic_3973/" width="1200" height="600"></iframe>
+<iframe src="/default.asp" width="100%" height="300" style="border:1px solid black;">
+</iframe>
 
     </div>
 
